tests/harness/errors/118_dbg_pipeline_tap.eu
result: [1, 2, 3] map(* 2) dbg{} map(- 1)
